--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "hbs": "^4.0.1"
   },
   "devDependencies": {},
